--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
   <br>
   <button class="button">Button</button>
   <br>
-  <p>Code: <span class="morse"></span></p>
+  <!-- <p>Code: <span class="morse"></span></p> -->
   <p>Translate: <span class="translate"></span></p>
   
   <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script>
   <script src="./js/morseSymbols.js"></script>
-
-  <!-- procedural -->
-  <!-- <script src="./js/click.js"></script> -->
 
   <!-- reactive -->
   <script src="./js/mouse.js"></script>
