--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RxJS</title>
+  <title>Morse</title>
   <style>
     .click-block {
       display: flex;
@@ -18,6 +18,8 @@
   </style>
 </head>
 <body>
+  <div id="app"></div>
+
   <div class="click-block">
     <div>Сlick here</div>
   </div>
@@ -26,11 +28,13 @@
   <br>
   <!-- <p>Code: <span class="morse"></span></p> -->
   <p>Translate: <span class="translate"></span></p>
-  
-  <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script>
-  <script src="./js/morseSymbols.js"></script>
+
+  <!-- <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script> -->
+  <!-- <script src="./js/morseSymbols.js"></script> -->
+
 
   <!-- reactive -->
-  <script src="./js/mouse.js"></script>
+  <!-- <script src="./js/mouse.js"></script> -->
+  <script src="./bundle.js"></script>
 </body>
 </html>
