--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,44 @@
       border: 1px solid green;
       background-color: lightgrey;
     }
+
+    .table {
+      width: 200px;
+    }
+
+    tr {
+      display: flex;
+      border-bottom: 1px solid black;
+    }
+
+    td {
+      width: 50%;
+      padding: 10px 15px;
+      border-right: 1px solid black;
+      border-left: 1px solid black;
+      text-align: center;
+    }
+
+    .td:first-of-type {
+      /* border-right: 1px solid black; */
+    }
+    .td:last-of-type {
+      border-left: none;
+    }
   </style>
 </head>
 <body>
   <div id="app"></div>
 
-  <div class="click-block">
+
+  <!-- <div class="click-block">
     <div>Сlick here</div>
   </div>
   <br>
   <button class="button">Button</button>
-  <br>
+  <br> -->
   <!-- <p>Code: <span class="morse"></span></p> -->
-  <p>Translate: <span class="translate"></span></p>
+  <!-- <p>Translate: <span class="translate"></span></p> -->
 
   <!-- <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script> -->
   <!-- <script src="./js/morseSymbols.js"></script> -->
