style for heading and table

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@ body {
     }
 
     .symbol-item {
+      width: 60px;
+      height: 60px;
       padding: 0.63rem;
       outline: 1px solid red;
       text-align: center;
@@ -59,37 +61,22 @@ body {
 
     .symbol-item .symbol {
       font-size: 1.5rem;
+      font-weight: bold;
+      line-height: 1.6;
     }
 
     .symbol-item .code {
       font-weight: bold;
       color: #f93333;
     }
+
+    .main-title span{
+      color: #f93333;
+    }
   </style>
 </head>
 <body>
   <div id="app"></div>
-
-
-  <!-- <div>
-    <div></div>
-
-  </div> -->
-  <!-- <div class="symbols-list">
-    <div class="symbol-item">
-      <div class="symbol">J</div>
-      <div class="code">.---</div>
-    </div>
-    <div class="symbol-item">
-      <div class="symbol">8</div>
-      <div class="code">---..</div>
-    </div>
-  </div> -->
-
-  <!-- "": "8",
-  "----.": "9",
-  "": "j",
-  "-.-": "k", -->
 
   <!-- <div class="click-block">
     <div>Сlick here</div>
