--- a/public/index.html
+++ b/public/index.html
@@ -6,74 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Morse</title>
   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:400,700" rel="stylesheet">
-  <style>
-body {
-  font-family: 'Overpass Mono', monospace;
-  font-size: 16px;
-}
-
-    .click-block {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 300px;
-      height: 200px;
-      border: 1px solid green;
-      background-color: lightgrey;
-    }
-
-    .table {
-      width: 200px;
-    }
-
-    tr {
-      display: flex;
-      border-bottom: 1px solid black;
-    }
-
-    td {
-      width: 50%;
-      padding: 10px 15px;
-      border-right: 1px solid black;
-      border-left: 1px solid black;
-      text-align: center;
-    }
-
-    .td:first-of-type {
-      /* border-right: 1px solid black; */
-    }
-    .td:last-of-type {
-      border-left: none;
-    }
-
-    .symbols-list {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    .symbol-item {
-      width: 60px;
-      height: 60px;
-      padding: 0.63rem;
-      outline: 1px solid red;
-      text-align: center;
-    }
-
-    .symbol-item .symbol {
-      font-size: 1.5rem;
-      font-weight: bold;
-      line-height: 1.6;
-    }
-
-    .symbol-item .code {
-      font-weight: bold;
-      color: #f93333;
-    }
-
-    .main-title span{
-      color: #f93333;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div id="app"></div>
